# netkit.d

./: .dockerignore  .gitignore  Dockerfile  README.md  composition_root.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/api/: app_factory.py  container.py  dependencies.py
src/api/middleware/: error_handler.py
src/api/routers/: calculation_router.py  diagnostics_router.py  pages_router.py
src/api/schemas/: calculation_schemas.py  diagnostics_schemas.py  error_schema.py
src/application/: exceptions.py
src/application/dto/: calculation_dto.py  diagnostics_dto.py
src/application/ports/: dns_port.py  ping_port.py  port_scan_port.py  traceroute_port.py  whois_port.py
src/application/use_cases/: calculate_subnet_info.py  classify_ipv4.py  classify_ipv6.py  convert_ipv6.py  dns_lookup.py  group_by_network.py  lookup_port_info.py  ping_host.py  range_to_cidr.py  scan_ports.py  split_vlsm.py  summarize_supernet.py  (+2 more)
src/domain/: exceptions.py
static/i18n/: i18n.js  translations.js
static/pages/: main-page.js
static/services/: api-client.js  calculation-service.js  diagnostics-service.js
static/store/: language-store.js  store.js  theme-store.js
static/styles/: base.css  components.css  index.css  layout.css  tokens.css
static/utils/: dom.js  ip-class-info.js  ip-validation.js  mask-options.js
templates/: index.html
tests/: conftest.py
tests/integration/: test_calculation_api.py  test_diagnostics_api.py
(+54 files in other folders)
